# nqvtk

./: .hgignore  CMakeLists.txt  NQVTKConfig.cmake.in  README.md  README.txt  UseNQVTK.cmake.in  main.cpp
GPGPU/: VolumeGaussianFilter.cpp  VolumeGaussianFilter.h  VolumeJacobianDeterminant.cpp  VolumeJacobianDeterminant.h  VolumeToVolumeFilter.cpp  VolumeToVolumeFilter.h
Interactors/: ArcballCameraInteractor.cpp  ArcballCameraInteractor.h  BrushingInteractor.cpp  BrushingInteractor.h  CameraInteractor.cpp  CameraInteractor.h  Interactor.cpp  Interactor.h  MainViewInteractor.cpp  MainViewInteractor.h  MouseEvent.h  ObjectInteractor.cpp  ObjectInteractor.h  OrbitCameraInteractor.cpp  OrbitCameraInteractor.h  SliceViewInteractor.cpp  SliceViewInteractor.h
Math/: Matrix3x3.h  Vector3.h
NQVTK/GPGPU/: VolumeGaussianFilter.cpp  VolumeGaussianFilter.h
NQVTK/Interactors/: ArcballCameraInteractor.h  BrushingInteractor.cpp  CameraInteractor.cpp  Interactor.cpp  Interactor.h  MainViewInteractor.cpp  ObjectInteractor.cpp  ObjectInteractor.h  OrbitCameraInteractor.h  SliceViewInteractor.cpp
NQVTK/Math/: Matrix3x3.h  Vector3.h
NQVTK/ParamSets/: DualThresholdParamSet.cpp  FilteredVolumeParamSet.h  PCACorrespondenceParamSet.cpp  PCACorrespondenceParamSet.h  VolumeParamSet.cpp  VolumeParamSet.h
NQVTK/Renderables/: AttributePointers.h  AttributeSet.cpp  AttributeSet.h  PCAPointCorrespondenceGlyphs.cpp  PointCloud.h  Renderable.cpp  Renderable.h  VBOMesh.cpp  VBOMesh.h
NQVTK/Rendering/: ArcballCamera.cpp  ArcballCamera.h  BrushingRenderer.h  Camera.cpp  Camera.h  CrossEyedStereoRenderer.cpp  CrossEyedStereoRenderer.h  ImageDataVolume.cpp  ImageDataVolume.h  LayeredRaycastingRenderer.cpp  LayeredRenderer.cpp  LayeredRenderer.h  NestedRenderer.h  OrbitCamera.cpp  OrbitCamera.h  OrthoCamera.h  Renderer.cpp  Renderer.h  Scene.h  SelectionView.cpp  SelectionView.h  ShadowMappingRenderer.h  SimpleRenderer.cpp  SimpleRenderer.h  SliceRenderer.cpp  SliceRenderer.h  View.h  Volume.h
NQVTK/Styles/: CustomLayeredRaycaster.cpp  DeformationRaycaster.cpp  DeformationRaycaster.h  DepthPeeling.cpp  DepthPeeling.h  DistanceFields.cpp  DistanceFields.h  IBIS.cpp  RenderStyle.cpp  ShadowMap.cpp
ParamSets/: DistanceFieldParamSet.cpp  DistanceFieldParamSet.h  DualThresholdParamSet.cpp  DualThresholdParamSet.h  FilteredVolumeParamSet.cpp  FilteredVolumeParamSet.h  PCACorrespondenceParamSet.cpp  PCACorrespondenceParamSet.h  PCAParamSet.cpp  PCAParamSet.h  ParamSet.cpp  ParamSet.h  TransferFunctionParamSet.cpp  TransferFunctionParamSet.h  VolumeParamSet.cpp  VolumeParamSet.h
Renderables/: AttributeSet.cpp  AttributeSet.h  PCAPointCorrespondenceGlyphs.cpp  PCAPointCorrespondenceGlyphs.h  PointCloud.cpp  PolyData.cpp  PolyData.h  Renderable.cpp  Renderable.h  VBOMesh.cpp  VBOMesh.h
Rendering/: ArcballCamera.cpp  ArcballCamera.h  AttributePointers.h  AttributeSet.h  BrushingRenderer.cpp  BrushingRenderer.h  Camera.cpp  Camera.h  CrossEyedStereoRenderer.cpp  CrossEyedStereoRenderer.h  DistanceFieldParamSet.h  ImageDataTexture3D.cpp  ImageDataTexture3D.h  ImageDataVolume.cpp  ImageDataVolume.h  LayeredRaycastingRenderer.cpp  LayeredRaycastingRenderer.h  LayeredRenderer.cpp  LayeredRenderer.h  LayeredRendererParamSet.h  NestedRenderer.cpp  NestedRenderer.h  OrbitCamera.cpp  OrbitCamera.h  OrthoCamera.cpp  OrthoCamera.h  OverlayRenderer.cpp  OverlayRenderer.h  PCAParamSet.h  PCAPointCorrespondenceGlyphs.h  ParamSet.h  PointCloud.h  PointExtractingRenderer.h  PointFilteringRenderer.cpp  PointFilteringRenderer.h  PolyData.h  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  (+16 more)
Shaders/: CommonIBISPainterFS.txt  CommonIBISScribeFS.txt  CommonIBISScribeVS.txt  ConvolutionFilter.txt  ConvolutionFilterOnePass.txt  DeformationRaycasterPainterFS.OldVersionWithTexture.txt  DeformationRaycasterPainterFS.txt  DepthPeelingPainterFS.txt  DepthPeelingScribeFS.txt  DistanceFieldsPainterFS.txt  DistanceFieldsScribeFS.txt  DistanceFieldsScribeVS.txt  GenericPainterVS.txt  IBISPainterFS.txt  IBISScribeFS.txt  IBISScribeVS.txt  JacobianDeterminant.txt  LayeredRaycasterPainterFS.txt  LayeredRaycasterScribeCastFS.txt  LayeredRaycasterScribePeelFS.txt  LayeredRaycasterScribePeelVS.txt  LibCSG.txt  LibUtility.txt  PointFilterFS.txt  PointFilterVS.txt  RaycasterPainterFS.txt  RaycasterScribeFS.txt  RaycasterScribeVS.txt  ShadowMapPainterFS.txt  ShadowMapScribeFS.txt  ShadowMapScribeVS.txt  SimplePCAVS.txt
Styles/: CustomLayeredRaycaster.cpp  CustomLayeredRaycaster.h  DeformationRaycaster.cpp  DeformationRaycaster.h  DepthPeeling.cpp  DepthPeeling.h  DistanceFields.cpp  DistanceFields.h  IBIS.cpp  IBIS.h  LayeredIsoRaycaster.h  LayeredRaycaster.cpp  LayeredRaycaster.h  Raycaster.cpp  Raycaster.h  RenderStyle.cpp  RenderStyle.h  ShadowMap.cpp  ShadowMap.h
Utilities/: CMakeLists.txt
Utilities/TextToHeader/: CMakeLists.txt  TextToHeader.cpp
Widgets/: NQVTKWidget.cpp  NQVTKWidget.h  NQVTKWindow.cpp  NQVTKWindow.h  NQVTKWindow.ui  RenderableControlWidget.cpp  RenderableControlWidget.h  sources.cmake
